--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<head>
+    <title> "The More You Know"</title>
+    <link rel="stylesheet" href= "style.css">
+</head>
+<body>
+    <ul class= "menu" id= "menuItems">
+        <li>COMPANY</li>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+    </ul>
+    <h1>The More You Know</h1>
+    <p1>Text 1</p1>
+    <p1>Text 2</p1>
+    <p1>Text 3</p1>
+    <p2>SecondLine1</p2>
+    <p2>SecondLine2</p2>
+<h3>This is the last portion of the page. Blah, Blah, Blah</h3>
+</body>
+<footer>
+
+</footer>
